--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     <section id='posts'>
         <header class='blog-header' role='banner'>
         <h1 class='blog-title'>
-        Felix Maier's Blog
+        Felix Maier
         </h1>
         </header>
 
