--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
         <h1 class='blog-title'>
         Felix Maier
         </h1>
+        <img src="http://25.media.tumblr.com/tumblr_m0533sxHIJ1qdpo8mo1_400.gif" style="position: relative;top: -5px;">
         </header>
 
         <section class='etc email-container'>
