--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
 <section class='container'>
     <section id='posts'>
         <header class='blog-header' role='banner'>
-        <h1 class='blog-title'>
+        <a href="http://maierfelix.github.io/"><h1 class='blog-title'>
         Felix Maier
-        </h1>
+        </h1></a>
         <img src="http://25.media.tumblr.com/tumblr_m0533sxHIJ1qdpo8mo1_400.gif" style="position: relative;top: -5px;">
         </header>
 
