--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,11 @@
         <header class='blog-header' role='banner'>
         <a href="http://maierfelix.github.io/"><h1 class='blog-title'>
         Felix Maier
-        </h1></a>
-        <img src="http://25.media.tumblr.com/tumblr_m0533sxHIJ1qdpo8mo1_400.gif" style="position: relative;top: -5px;">
+        <img class="" src="http://25.media.tumblr.com/tumblr_m0533sxHIJ1qdpo8mo1_400.gif" style="
+    position: absolute;
+    margin-left: 5px;
+    margin-top: -10px;
+"></h1></a>
         </header>
 
         <section class='etc email-container'>
