--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
   letter-spacing: 1px;
   line-height: 18px;
   color: #ffffff;
-  background: #3b3b3b;
+  background: #1a1a1a;
 }
 
 html::-webkit-scrollbar {
